--- a/app/src/main/res/layout/activity_birthday_greeting.xml
+++ b/app/src/main/res/layout/activity_birthday_greeting.xml
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:fontFamily="cursive"
         android:text="Happy Birthday"
         android:textAlignment="center"
         android:textColor="#E30B0B"
@@ -37,14 +36,14 @@
         app:layout_constraintVertical_bias="0.23000002" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/arizonia"
-        android:text="Waseem Idrisi"
-        android:textColor="@color/white"
-        android:textSize="30sp"
+        android:text="Name"
+        android:textColor="#FF9800"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
